src/test/deca/syntax/invalid/if-withoutCondition.synt
if-withoutCondition.deca:4: